Ajustando e testando a delecao de cliente